--- a/estilos.css
+++ b/estilos.css
@@ -7,13 +7,23 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    background-color: #16839a;
+    background-color: rgb(29,59,65);
     color: white;
     //**background-image: url("1.jpg");**//
 }
 .titulo
 {
-    color: rgba(255, 255, 255, 0.25);
+
+    color: #9ccceb40;
+    font-size: 20px;
+    text-transform: capitalize;
+    border-radius: 7px;
+    transition: 0.5s;
+
+}
+.titulo2
+{
+    color: #9ccceb40;
     font-size: 20px;
     text-transform: capitalize;
     border-radius: 7px;
@@ -32,7 +42,7 @@
 
 .mensaje
 {
-    color: rgba(255, 255, 255, 0.25);
+    color: rgba(175,255,248,0.25);
     font-size: 24px;
     text-transform: capitalize;
     border-radius: 7px;
@@ -75,7 +85,7 @@
     flex-direction: column;
     gap: 30px;
     background: white;
-    background-color: #02374F;
+    background-color: rgb(30,88,112);
     
 }
 .contenedor2
@@ -94,7 +104,15 @@
 .inputBox
 {
     position: relative;
+    height: auto;
+    color: #a4ff20;
+    width: 80%;
+
+    padding: 12px;
+    font-style: italic;
+    font-weight: bold;
     width: 350px;
+    background-color: #374447;
 
 
 
@@ -104,7 +122,7 @@
     width: 100%;
     padding: 12px;
     border: 1px solid rgba(255, 255, 255, 0.25);
-    background: #02374F;
+    background: rgb(45,103,129);
     border-radius: 5px;
     outline: none;
     color: #fff;
@@ -133,7 +151,7 @@
     transform: translateX(10px) translateY(-7px);
     font-size: 0.65em;
     padding: 0 10px;
-    background: #02374F;
+    background: rgb(103,121,129);
     letter-spacing: 0.2em;
     border: 1px solid #00dfc4;
 
@@ -163,15 +181,36 @@
 .boton2
 {
     text-decoration: none; 
-    color: #0DFFF4;
-    border: 1px solid #458582;
-    padding: 5px;
+    font-style: italic;
+
+    font-weight: bold;
+    color:rgb(229,255,13);
+    border: 1px solid rgb(19,25,22);
+    background-color: rgb(15,46,46);
     border-radius: 7px;
-    width: 350px;
-    font-size: 25px;
+    padding: 14px;
+    width: auto;
+    font-size: 15px;
     letter-spacing: 0.2em;
     font-family: 'Raleway', sans-serif;
 
     
 }
 
+.text
+{
+    height: auto;
+    width: 80%;
+    padding: 12px;
+    font-style: italic;
+    font-weight: bold;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+
+    background: rgb(35,45,49);
+    border-radius: 5px;
+    outline: none;
+    color: rgb(240,148,32);
+    font-size: 0.75em;
+    letter-spacing: 0.2em;
+    font-family: 'Raleway', sans-serif;
+}
