--- a/estilos.css
+++ b/estilos.css
@@ -1,29 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
-*
 
+
+body
 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    background-color: rgb(29,59,65);
+    background-size: cover;
     color: white;
-    //**background-image: url("1.jpg");**//
+    background-image: url("1.jpg");
 }
 .titulo
 {
 
-    color: #9ccceb40;
-    font-size: 20px;
-    text-transform: capitalize;
-    border-radius: 7px;
-    transition: 0.5s;
-
-}
-.titulo2
-{
-    color: #9ccceb40;
+    color: rgba(73,237,239,0.903);
     font-size: 20px;
     text-transform: capitalize;
     border-radius: 7px;
@@ -32,13 +24,8 @@
 }
 
 
-.titulo:hover
-{
-    color: #0DFFF4;
-    font-size: 24px;
-    font-family: 'Raleway', sans-serif;
-    
-}
+
+
 
 .mensaje
 {
@@ -62,30 +49,19 @@
     letter-spacing: 0.2em;
     font-family: 'Raleway', sans-serif;
 }
-.mensaje2
-{
-    color: rgba(255, 255, 255, 0.25);
-    font-size: 24px;
-    text-transform: capitalize;
-    border-left: 1px solid #01E7DC;
-    border-right: 1px solid #01E7DC;
-    padding: 12px;
-    color: #01E7DC;
-    letter-spacing: 0.2em;
-    font-family: 'Raleway', sans-serif;
-}
+
 .contenido
 {
   
-    color: ghostwhite;
+    
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
     gap: 30px;
-    background: white;
-    background-color: rgb(30,88,112);
+    
+    background-color: rgba(8,39,52,0.227);
     
 }
 .contenedor2
@@ -180,22 +156,26 @@
 
 .boton2
 {
-    text-decoration: none; 
+    
     font-style: italic;
 
     font-weight: bold;
-    color:rgb(229,255,13);
+    color: rgb(229,255,13);
     border: 1px solid rgb(19,25,22);
-    background-color: rgb(15,46,46);
+    
     border-radius: 7px;
     padding: 14px;
     width: auto;
     font-size: 15px;
     letter-spacing: 0.2em;
     font-family: 'Raleway', sans-serif;
+    
+background-color: rgba(5,91,93,0.632);  
+ backdrop-filter: blur(7px);
+}
 
     
-}
+
 
 .text
 {
@@ -206,11 +186,50 @@
     font-weight: bold;
     border: 1px solid rgba(255, 255, 255, 0.25);
 
-    background: rgb(35,45,49);
+    
     border-radius: 5px;
     outline: none;
     color: rgb(240,148,32);
-    font-size: 0.75em;
+    font-size: 13px;
     letter-spacing: 0.2em;
     font-family: 'Raleway', sans-serif;
+    background-color: rgba(13,76,76,0.606);  
+
+ backdrop-filter: blur(7px);
 }
+table {
+   width: 100%;
+   border: 1px solid #000;
+   
+}
+td {
+   width: 25%;
+   text-align: left;
+   vertical-align: top;
+   border: 1px solid rgb(17,173,180);
+   background-color: rgb(23,33,45);
+   color: rgb(181,235,79);
+   
+   
+}
+.datos
+{
+  color: rgb(255,163,80);
+  background-color: rgb(23,33,45);
+  font-style: italic;
+  letter-spacing: 0.2em;
+
+}
+.iframe
+{
+  width: 100%;
+  height: 40%;
+  color: white;
+  background-color: rgba(6,84,100,0.506);  
+
+ backdrop-filter: blur(7px);
+}
+
+
+
+
